test/library/standard/Sort/errors/sortDomainArray.sparse6.good
sortDomainArray.chpl:38: error: sorted() is not supported on sparse arrays
